--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     </title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+
 </head>
 <body class="container">
 
@@ -19,24 +21,20 @@
 </header>
 
 <main>
-<section class="row info-box mt-5">
-    <section class="col-4">
-        <img class="image" src="https://media.licdn.com/dms/image/C5603AQGUY_e_AZULSQ/profile-displayphoto-shrink_200_200/0?e=1528470000&v=beta&t=Rlx3sO_2FaHk7Ghy35CN1o4T0bdWc_6fDWHb4ldA_MY" alt="">
-    <div class="zitat">
-       <p>
-       "Neugierig, wissensdurstig, zuverlässig"
-        </p>
-    </div> 
-    </section>
+<section class="row info-box mt-5 stage-image">
 
-    <section class="col-8 info-box-column">
-<p>
+    <section class="col-12 info-box-column text-center">
     <h1>Hallo, ich bin Natalia,</h1>
     <br>
-    <h3>Web Developerin und eCommerce-Spezialistin.</h3> 
     <br>
-    <h3>Ich begeistere mich für guten Code, Content, Kunst und Sport.</h3>
-</p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h2>Web Developerin und eCommerce-Spezialistin.</h2>
+    <br>
+    <br>
     </section>
 </section>
 
@@ -89,7 +87,7 @@
     </section>
     </section>
     </section>
-    <section class="row info-box mt-5 p-4">
+    <section class="row info-box mt-5 p-4 contact-image">
         <section class="col-6 p-1 mr-4">
             <h2>Vita</h2>
             <br>
