Add readme file and footer

--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
     </section>
 </main>
 
-<footer></footer>
+<footer class="info-box mt-5 p-4">
+    <h3>Impressum</h3>
+</footer>
 
     
 </body>
