--- a/index.html
+++ b/index.html
@@ -48,27 +48,27 @@
 <div>
     <button type="button" class="btn-special btn-secondary disabled">HTML5</button>
     <button type="button" class="btn-special btn-secondary disabled">CSS3</button>
-    <button type="button" class="btn btn-secondary disabled">Modular CSS</button>
-    <button type="button" class="btn btn-secondary disabled">React</button>
-    <button type="button" class="btn btn-secondary disabled">Reduct</button>
+    <button type="button" class="btn-special btn-secondary disabled">Modular CSS</button>
+    <button type="button" class="btn-special btn-secondary disabled">React</button>
+    <button type="button" class="btn-special btn-secondary disabled">Reduct</button>
     <button type="button" class="btn-special btn-secondary disabled">JavaScript</button>
-    <button type="button" class="btn btn-secondary disabled">Responsive Websites</button>
-    <button type="button" class="btn btn-secondary disabled">Mobile Apps</button>
-    <button type="button" class="btn btn-secondary disabled">Node.js</button>
-    <button type="button" class="btn btn-secondary disabled">NoSQL</button>
-    <button type="button" class="btn btn-secondary disabled">Scrum & Kanban</button>
+    <button type="button" class="btn-special btn-secondary disabled">Responsive Websites</button>
+    <button type="button" class="btn-special btn-secondary disabled">Mobile Apps</button>
+    <button type="button" class="btn-special btn-secondary disabled">Node.js</button>
+    <button type="button" class="btn-special btn-secondary disabled">NoSQL</button>
+    <button type="button" class="btn-special btn-secondary disabled">Scrum & Kanban</button>
 </div>
 </section>
 <section class="col p-1 mr-4">
 <h4>eCommerce & Vertrieb</h4>
 <br>
 <div>
-    <button type="button" class="btn btn-secondary disabled">Key Account Management</button>
-    <button type="button" class="btn btn-secondary disabled">Sales</button>
+    <button type="button" class="btn-special btn-secondary disabled">Key Account Management</button>
+    <button type="button" class="btn-special btn-secondary disabled">Sales</button>
     <button type="button" class="btn-special btn-secondary disabled">Webshop-Management</button>
-    <button type="button" class="btn btn-secondary disabled">A/B-Tests</button>
-    <button type="button" class="btn btn-secondary disabled">Kuratieren</button>
-    <button type="button" class="btn btn-secondary disabled">Online-Marketing</button>
+    <button type="button" class="btn-special btn-secondary disabled">A/B-Tests</button>
+    <button type="button" class="btn-special btn-secondary disabled">Kuratieren</button>
+    <button type="button" class="btn-special btn-secondary disabled">Online-Marketing</button>
 </div>
 
 </section>
@@ -76,13 +76,13 @@
 <h4>Soft Skills</h4>
 <br>
 <div>
-    <button type="button" class="btn btn-secondary disabled">Neugierde</button>
-    <button type="button" class="btn btn-secondary disabled">Begeisterung</button>
+    <button type="button" class="btn-special btn-secondary disabled">Neugierde</button>
+    <button type="button" class="btn-special btn-secondary disabled">Begeisterung</button>
     <button type="button" class="btn-special btn-secondary disabled">Blick über den Tellerrand</button>
-    <button type="button" class="btn btn-secondary disabled">Interkulturelle Kompetenz</button>
-    <button type="button" class="btn btn-secondary disabled">Flexibilität</button>
-    <button type="button" class="btn btn-secondary disabled">Englisch fließend</button>
-    <button type="button" class="btn btn-secondary disabled">Polnisch fließend</button>
+    <button type="button" class="btn-special btn-secondary disabled">Interkulturelle Kompetenz</button>
+    <button type="button" class="btn-special btn-secondary disabled">Flexibilität</button>
+    <button type="button" class="btn-special btn-secondary disabled">Englisch fließend</button>
+    <button type="button" class="btn-special btn-secondary disabled">Polnisch fließend</button>
 </div>
     </section>
     </section>
@@ -103,19 +103,33 @@
         <section class="col-4 p-1 mr-4">
             <h2>Hier bin ich zu finden</h2>
             <br>
-            natalia.werdung(at)gmx.de
-            <br>
-            <br>
             <a href="https://www.linkedin.com/in/natalia-werdung-8b167b119/" class="contact-link">Linkedin</a>
             <a href="https://www.xing.com/profile/Natalia_Werdung" class="contact-link">Xing</a>
-            <a href="#" class="contact-link">GitHub</a>
+            <a href="https://github.com/nataliawerdung" class="contact-link">GitHub</a>
         </section>
     </section>
 </main>
 
-<footer class="info-box mt-5 p-4">
-    <h3>Impressum</h3>
-</footer>
+<footer class="info-box mt-5 p-4 row">
+    <div>
+        <h4 class="col-6">Impressum</h4>
+        <br>
+        <br>
+        <br>
+        <h8>© Natalia Werdung 2018</h8>
+    </div>
+    <br>
+    <p class="col-6">Natalia Werdung
+    <br>
+    Therese-Giehse-Allee 35
+    <br>
+    81739 München
+    <br>
+    Email: natalia.werdung(at)gmx.de
+    <br>
+    <br>
+    </p>
+    </footer>
 
     
 </body>
