Font pacifico and clear html

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Natalia Werdung Web Development   
-    </title>
+        <title>Natalia Werdung Web Development   
+        </title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-
 </head>
+
 <body class="container">
 
 <header class="flexbox row">
@@ -21,115 +21,119 @@
 </header>
 
 <main>
+
 <section class="row info-box mt-5 stage-image">
 
-    <section class="col-12 info-box-column text-center">
-    <h1>Hallo, ich bin Natalia,</h1>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <h2>Web Developerin und eCommerce-Spezialistin.</h2>
-    <br>
-    <br>
+    <section class="col-12 info-box-column text-center font-pacifico">
+        <h1>Hi, ich bin Natalia</h1>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h2>Web Developerin und eCommerce-Spezialistin</h2>
+        <br>
     </section>
+
 </section>
 
 <section class="row info-box mt-5 p-4">
     <h2 class="col-12 p-1">Skills</h2>
 
-    <section class="row flexbox pl-3">
-<section class="col p-1 mr-4">
-<h4>Web Development</h4>
-<br>
-<div>
-    <button type="button" class="btn-special btn-secondary disabled">HTML5</button>
-    <button type="button" class="btn-special btn-secondary disabled">CSS3</button>
-    <button type="button" class="btn-special btn-secondary disabled">Modular CSS</button>
-    <button type="button" class="btn-special btn-secondary disabled">React</button>
-    <button type="button" class="btn-special btn-secondary disabled">Reduct</button>
-    <button type="button" class="btn-special btn-secondary disabled">JavaScript</button>
-    <button type="button" class="btn-special btn-secondary disabled">Responsive Websites</button>
-    <button type="button" class="btn-special btn-secondary disabled">Mobile Apps</button>
-    <button type="button" class="btn-special btn-secondary disabled">Node.js</button>
-    <button type="button" class="btn-special btn-secondary disabled">NoSQL</button>
-    <button type="button" class="btn-special btn-secondary disabled">Scrum & Kanban</button>
-</div>
-</section>
-<section class="col p-1 mr-4">
-<h4>eCommerce & Vertrieb</h4>
-<br>
-<div>
-    <button type="button" class="btn-special btn-secondary disabled">Key Account Management</button>
-    <button type="button" class="btn-special btn-secondary disabled">Sales</button>
-    <button type="button" class="btn-special btn-secondary disabled">Webshop-Management</button>
-    <button type="button" class="btn-special btn-secondary disabled">A/B-Tests</button>
-    <button type="button" class="btn-special btn-secondary disabled">Kuratieren</button>
-    <button type="button" class="btn-special btn-secondary disabled">Online-Marketing</button>
-</div>
+        <section class="row flexbox pl-3">
+                <section class="col p-1 mr-4">
+                <h4>Web Development</h4>
+                <br>
+                <div>
+                    <button type="button" class="btn-special btn-secondary disabled">HTML5</button>
+                    <button type="button" class="btn-special btn-secondary disabled">CSS3</button>
+                    <button type="button" class="btn-special btn-secondary disabled">Modular CSS</button>
+                    <button type="button" class="btn-special btn-secondary disabled">React</button>
+                    <button type="button" class="btn-special btn-secondary disabled">Reduct</button>
+                    <button type="button" class="btn-special btn-secondary disabled">JavaScript</button>
+                    <button type="button" class="btn-special btn-secondary disabled">Responsive Websites</button>
+                    <button type="button" class="btn-special btn-secondary disabled">Mobile Apps</button>
+                    <button type="button" class="btn-special btn-secondary disabled">Node.js</button>
+                    <button type="button" class="btn-special btn-secondary disabled">NoSQL</button>
+                    <button type="button" class="btn-special btn-secondary disabled">Scrum & Kanban</button>
+                </div>
+                </section>
 
-</section>
-<section class="col p-1 mr-4">
-<h4>Soft Skills</h4>
-<br>
-<div>
-    <button type="button" class="btn-special btn-secondary disabled">Neugierde</button>
-    <button type="button" class="btn-special btn-secondary disabled">Begeisterung</button>
-    <button type="button" class="btn-special btn-secondary disabled">Blick über den Tellerrand</button>
-    <button type="button" class="btn-special btn-secondary disabled">Interkulturelle Kompetenz</button>
-    <button type="button" class="btn-special btn-secondary disabled">Flexibilität</button>
-    <button type="button" class="btn-special btn-secondary disabled">Englisch fließend</button>
-    <button type="button" class="btn-special btn-secondary disabled">Polnisch fließend</button>
-</div>
+    <section class="col p-1 mr-4">
+                <h4>eCommerce & Vertrieb</h4>
+                <br>
+                <div>
+                    <button type="button" class="btn-special btn-secondary disabled">Key Account Management</button>
+                    <button type="button" class="btn-special btn-secondary disabled">Sales</button>
+                    <button type="button" class="btn-special btn-secondary disabled">Webshop-Management</button>
+                    <button type="button" class="btn-special btn-secondary disabled">A/B-Tests</button>
+                    <button type="button" class="btn-special btn-secondary disabled">Kuratieren</button>
+                    <button type="button" class="btn-special btn-secondary disabled">Online-Marketing</button>
+                </div>
+                </section>
+
+    <section class="col p-1 mr-4">
+                <h4>Soft Skills</h4>
+                <br>
+                <div>
+                    <button type="button" class="btn-special btn-secondary disabled">Neugierde</button>
+                    <button type="button" class="btn-special btn-secondary disabled">Begeisterung</button>
+                    <button type="button" class="btn-special btn-secondary disabled">Blick über den Tellerrand</button>
+                    <button type="button" class="btn-special btn-secondary disabled">Interkulturelle Kompetenz</button>
+                    <button type="button" class="btn-special btn-secondary disabled">Flexibilität</button>
+                    <button type="button" class="btn-special btn-secondary disabled">Englisch fließend</button>
+                    <button type="button" class="btn-special btn-secondary disabled">Polnisch fließend</button>
+                </div>
+                </section>
+
     </section>
     </section>
-    </section>
+
     <section class="row info-box mt-5 p-4 contact-image">
         <section class="col-6 p-1 mr-4">
             <h2>Vita</h2>
             <br>
-            <ul>
-                <li>2018: Web Development-Bootcamp (neuefische GmbH)</li>
-                <li>2017-2018: Business Development (Carlsen Verlag GmbH)</li>
-                <li>2015-2017: eCommerce-Managerin (Google, Kobo)</li>
-                <li>2008-2015: Sales & Marketing (Verlagsbranche)</li> 
-                <li>2006-2008: Ausbildung als Buchhändlerin</li> 
-                <li>2001-2006: Studium der Theaterwissenschaften</li>
-            </ul>
+                <ul>
+                    <li>2018: Web Development-Bootcamp (neuefische GmbH)</li>
+                    <li>2017-2018: Business Development (Carlsen Verlag GmbH)</li>
+                    <li>2015-2017: eCommerce-Managerin (Google, Kobo)</li>
+                    <li>2008-2015: Sales & Marketing (Verlagsbranche)</li> 
+                    <li>2006-2008: Ausbildung als Buchhändlerin</li> 
+                    <li>2001-2006: Studium der Theaterwissenschaften</li>
+                <br>
+                </ul>
         </section>
-        <section class="col-4 p-1 mr-4">
+
+         <section class="col-4 p-1 mr-4">
             <h2>Hier bin ich zu finden</h2>
             <br>
-            <a href="https://www.linkedin.com/in/natalia-werdung-8b167b119/" class="contact-link">Linkedin</a>
-            <a href="https://www.xing.com/profile/Natalia_Werdung" class="contact-link">Xing</a>
-            <a href="https://github.com/nataliawerdung" class="contact-link">GitHub</a>
+                <a href="https://www.linkedin.com/in/natalia-werdung-8b167b119/" class="contact-link">Linkedin</a>
+                <a href="https://www.xing.com/profile/Natalia_Werdung" class="contact-link">Xing</a>
+                <a href="https://github.com/nataliawerdung" class="contact-link">GitHub</a>
         </section>
     </section>
 </main>
 
 <footer class="info-box mt-5 p-4 row">
-    <div>
-        <h4 class="col-6">Impressum</h4>
-        <br>
-        <br>
-        <br>
-        <h8>© Natalia Werdung 2018</h8>
-    </div>
-    <br>
-    <p class="col-6">Natalia Werdung
-    <br>
-    Therese-Giehse-Allee 35
-    <br>
-    81739 München
-    <br>
-    Email: natalia.werdung(at)gmx.de
-    <br>
-    <br>
-    </p>
-    </footer>
+        <div>
+            <h4 class="col-6">Impressum</h4>
+            <br>
+            <br>
+            <br>
+            <h8>© Natalia Werdung 2018</h8>
+        </div>
+         <br>
+            <p class="col-6">Natalia Werdung
+            <br>
+            Therese-Giehse-Allee 35
+            <br>
+            81739 München
+            <br>
+            Email: natalia.werdung(at)gmx.de
+            <br>
+            <br>
+            </p>
+</footer>
 
     
 </body>
