Vita collapse js

--- a/index.html
+++ b/index.html
@@ -90,17 +90,27 @@
 
     <section class="row info-box mt-5 p-4 contact-image">
         <section class="col-6 p-1 mr-4">
-            <h2>Vita</h2>
+            <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false"
+                aria-controls="collapseExample">
+                <h2>Vita</h2>
+            </button>
             <br>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                    <p>
                 <ul>
                     <li>2018: Web Development-Bootcamp (neuefische GmbH)</li>
                     <li>2017-2018: Business Development (Carlsen Verlag GmbH)</li>
                     <li>2015-2017: eCommerce-Managerin (Google, Kobo)</li>
-                    <li>2008-2015: Sales & Marketing (Verlagsbranche)</li> 
-                    <li>2006-2008: Ausbildung als Buchhändlerin</li> 
+                    <li>2008-2015: Sales & Marketing (Verlagsbranche)</li>
+                    <li>2006-2008: Ausbildung als Buchhändlerin</li>
                     <li>2001-2006: Studium der Theaterwissenschaften</li>
-                <br>
+                    <br>
                 </ul>
+                </p>
+                </div>
+            </div>
+                
         </section>
 
          <section class="col-4 p-1 mr-4">
@@ -134,6 +144,11 @@
             </p>
 </footer>
 
-    
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 </body>
 </html>
