--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 </head>
 
-<body class="container">
+<body class="container mastercrash">
 
 <header class="flexbox row">
             <div>Natalia Werdung</div>
