--- a/index.html
+++ b/index.html
@@ -21,11 +21,8 @@
 
 <main>
 
-<section class="row info-box mt-5 stage-image">
-
-    <section class="col-12 info-box-column text-center font-pacifico">
+    <section class="row info-box-column mt-5 pt-4 stage-image text-center font-pacifico">
         <h1>Hi, ich bin Natalia</h1>
-        <br>
         <br>
         <br>
         <br>
@@ -33,8 +30,6 @@
         <h2>Web Developerin und eCommerce-Spezialistin</h2>
         <br>
     </section>
-
-</section>
 
 <section class="row info-box mt-5 p-4">
     <h2 class="col-12 p-1">Skills</h2>
