Add review comments

--- a/index.html
+++ b/index.html
@@ -9,20 +9,23 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 </head>
-  
+
 <body class="container">
 
 <header class="flexbox row">
+    <!-- Bitte stelle deine Indentation auf "2 Spaces" um. -->
+    <!-- Bitte korrigiere indentation -->
             <div>Natalia Werdung</div>
             <div>Web Development</div>
             <div>015122982749</div>
-            <div>natalia.werdung(at)gmx.de</div>        
+            <div>natalia.werdung(at)gmx.de</div>
 </header>
 
 <main>
 
     <section class="row info-box-column mt-5 pt-4 stage-image text-center font-pacifico">
         <h1>Hi, ich bin Natalia</h1>
+        <!-- Wozu die ganzen br? Abstände bitte durch css schaffen (z.B. durch margin) -->
         <br>
         <br>
         <br>
@@ -37,7 +40,7 @@
         <section class="row flexbox pl-3">
                 <section class="col p-1 mr-4">
                 <h4>Web Development</h4>
-                <br>
+                <br> <!-- br raus -->
                 <div>
                     <button type="button" class="btn-special btn-secondary disabled">HTML5</button>
                     <button type="button" class="btn-special btn-secondary disabled">CSS3</button>
@@ -54,6 +57,7 @@
                 </section>
 
     <section class="col p-1 mr-4">
+        <!-- Zu starke Einrückung -->
                 <h4>eCommerce & Vertrieb</h4>
                 <br>
                 <div>
@@ -89,10 +93,10 @@
                 aria-controls="collapseExample">
                 <h2>Vita</h2>
             </button>
-            <br>
+            <br> <!-- br raus -->
             <div class="collapse" id="collapseExample">
                 <div class="card card-body">
-                    <p>
+                    <p> <!-- Wozu das p hier? -->
                 <ul>
                     <li>2018: Web Development-Bootcamp (neuefische GmbH)</li>
                     <li>2017-2018: Business Development (Carlsen Verlag GmbH)</li>
@@ -100,17 +104,18 @@
                     <li>2008-2015: Sales & Marketing (Verlagsbranche)</li>
                     <li>2006-2008: Ausbildung als Buchhändlerin</li>
                     <li>2001-2006: Studium der Theaterwissenschaften</li>
-                    <br>
+                    <br> <!-- br überall raus -> Direkte Kinder von ul dürfen nur li sein. -->
                 </ul>
                 </p>
                 </div>
             </div>
-                
+
         </section>
 
          <section class="col-4 p-1 mr-4">
             <h2>Hier bin ich zu finden</h2>
             <br>
+
                 <a href="https://www.linkedin.com/in/natalia-werdung-8b167b119/" class="contact-link">Linkedin</a>
                 <a href="https://www.xing.com/profile/Natalia_Werdung" class="contact-link">Xing</a>
                 <a href="https://github.com/nataliawerdung" class="contact-link">GitHub</a>
@@ -124,6 +129,7 @@
             <br>
             <br>
             <br>
+            <!-- h8 gibt es nicht nur h1-h6 -->
             <h8>© Natalia Werdung 2018</h8>
         </div>
          <br>
