--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
           <button type="button" class="btn-special btn-secondary disabled">HTML5</button>
           <button type="button" class="btn-special btn-secondary disabled">CSS3</button>
           <button type="button" class="btn-special btn-secondary disabled">Modular CSS</button>
+          <button type="button" class="btn-special btn-secondary disabled"
+           data-toggle="collapse" data-target="#collapseExample">Animationen</button>
           <button type="button" class="btn-special btn-secondary disabled">React</button>
           <button type="button" class="btn-special btn-secondary disabled">Reduct</button>
           <button type="button" class="btn-special btn-secondary disabled">JavaScript</button>
@@ -126,6 +128,83 @@
     <br>
   </p>
 </footer>
+
+<section class="cloud collapse" id="collapseExample">
+<section class="row mt-5">
+  <div class="wolkenball-1"></div>
+  <div class="wolkenball-2"></div>
+  <div class="wolkenball-3"></div>
+</section>
+
+<section class="row ml-5 pl-2">
+  <section class="regen-1">
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+  </section>
+
+  <section class="regen-2">
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+  </section>
+
+  <section class="regen-3">
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+  </section>
+
+  <section class="regen-4">
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+  </section>
+
+  <section class="regen-5">
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+  </section>
+
+  <section class="regen-6">
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+    <div class="tropfen"></div>
+  </section>
+  </section>
+</section>
+</section>">
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
 crossorigin="anonymous"></script>
